--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "compile": "babel -d lib/ src/",
-    "test": "mocha --compilers js:babel-core/register",
+    "test": "babel-node node_modules/.bin/isparta cover _mocha  --compilers js:babel-core/register",
     "lint": "eslint -c .eslintrc src test ./*.js"
   },
   "repository": {
@@ -34,10 +34,12 @@
     "eslint-plugin-react": "^6.9.0",
     "mocha": "^3.2.0",
     "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.5",
+    "babel-polyfill": "^6.22.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0"
+
   }
 }
