--- a/package.json
+++ b/package.json
@@ -36,10 +36,9 @@
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "isparta": "^4.0.0",
-    "istanbul": "^0.4.5",
-    "babel-polyfill": "^6.22.0"
+    "istanbul": "^0.4.5"
   },
   "dependencies": {
-
+    "babel-polyfill": "^6.22.0"
   }
 }
