--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
 node_js:
 - '4.3'
+- '5'
+- '6'
 before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 before_script:
 - npm install -g codeclimate-test-reporter
 script:
-- npm run-script lint
+- npm run lint
 - npm test
 after_script:
 - codeclimate-test-reporter < coverage/lcov.info
