--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promise-fallback",
+  "name": "graceful-degrade",
   "version": "1.0.0",
   "description": "Support fallbacks for promises",
   "main": "lib/index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dancrumb/promise-fallback.git"
+    "url": "git+https://github.com/dancrumb/graceful-degrade.git"
   },
   "keywords": [
     "promises",
@@ -19,9 +19,9 @@
   "author": "Dan Rumney <dancrumb@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dancrumb/promise-fallback/issues"
+    "url": "https://github.com/dancrumb/graceful-degrade/issues"
   },
-  "homepage": "https://github.com/dancrumb/promise-fallback#readme",
+  "homepage": "https://github.com/dancrumb/graceful-degrade#readme",
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
