--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fallback-plan",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Handy support for graceful degradation",
   "main": "lib/index.js",
   "scripts": {
@@ -14,7 +14,8 @@
   },
   "keywords": [
     "promises",
-    "fallback", "graceful"
+    "fallback",
+    "graceful"
   ],
   "author": "Dan Rumney <dancrumb@gmail.com>",
   "license": "MIT",
