--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/dancrumb/fallback-plan#readme",
   "devDependencies": {
     "babel-cli": "^6.22.2",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
@@ -34,13 +35,13 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
-    "isparta": "^4.0.0",
-    "istanbul": "^0.4.5"
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.22.0"
+    "babel-runtime": "^6.22.0"
   }
 }
