--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "compile": "babel -d lib/ src/",
-    "test": "babel-node node_modules/.bin/isparta cover _mocha  --compilers js:babel-core/register",
+    "test": "jest",
     "lint": "eslint -c .eslintrc src test ./*.js",
     "preversion": "npm run compile"
   },
@@ -28,18 +28,13 @@
     "babel-cli": "^6.22.2",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
-    "isparta": "^4.0.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^10.1.0",
-    "sinon": "^14.0.1",
-    "sinon-chai": "^3.3.0"
+    "jest": "^29.2.2",
+    "sinon": "^14.0.1"
   },
   "dependencies": {
     "babel-runtime": "^6.22.0"
