--- a/package.json
+++ b/package.json
@@ -25,18 +25,14 @@
   },
   "homepage": "https://github.com/dancrumb/fallback-plan#readme",
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "jest": "^29.2.2",
-    "sinon": "^14.0.1"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
-  "dependencies": {
-    "babel-runtime": "^6.22.0"
-  }
+  "dependencies": {}
 }
