--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-
-
-
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
 node_modules/
-lib/
+dist/
 .DS_Store
 npm-debug.log
 coverage/
