--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fallback-plan",
   "version": "1.1.0",
   "description": "Handy support for graceful degradation",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "compile": "babel -d lib/ src/",
+    "build": "tsc",
     "test": "jest",
     "lint": "eslint -c .eslintrc src test ./*.js",
     "preversion": "npm run compile"
