--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "lint": "eslint -c .eslintrc src test ./*.js",
+    "lint": "yarn run eslint -c .eslintrc.js --ext .ts src",
     "preversion": "npm run compile"
   },
   "repository": {
@@ -26,13 +26,15 @@
   "homepage": "https://github.com/dancrumb/fallback-plan#readme",
   "devDependencies": {
     "eslint": "^8.26.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.10",
     "jest": "^29.2.2",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.7.1",
+    "@typescript-eslint/eslint-plugin": "5.40.0",
+    "@typescript-eslint/parser": "5.40.0"
   },
   "dependencies": {}
 }
