--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
   },
   "homepage": "https://github.com/dancrumb/fallback-plan#readme",
   "devDependencies": {
-    "eslint": "^8.26.0",
-    "eslint-plugin-import": "^2.2.0",
-    "jest": "^29.2.2",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "prettier": "2.7.1",
     "@typescript-eslint/eslint-plugin": "5.40.0",
-    "@typescript-eslint/parser": "5.40.0"
+    "@typescript-eslint/parser": "5.40.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "jest": "^29.2.2",
+    "prettier": "2.7.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "dependencies": {}
 }
