--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fallback-plan",
-  "version": "1.1.0",
+  "name": "@dancrumb/fallback-plan",
+  "version": "2.0.0",
   "description": "Handy support for graceful degradation",
   "main": "dist/index.js",
   "scripts": {
