--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "yarn run tsc",
     "test": "yarn run jest",
     "lint": "yarn run eslint -c .eslintrc.js --ext .ts src",
+    "docs": "yarn run typedoc src",
     "preversion": "npm run compile"
   },
   "repository": {
@@ -34,9 +35,10 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-prettier": "4.2.1",
     "jest": "^29.2.2",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.23.19",
     "typescript": "^4.8.4"
   },
   "packageManager": "yarn@3.2.4"
