--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: 'yarn'
+          cache: "yarn"
       - run: yarn install --immutable
       - run: yarn run lint
   test:
@@ -29,14 +29,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          cache: "yarn"
       - run: yarn install --immutable
       - name: Code Climate Coverage Action
         uses: paambaati/codeclimate-action@v3.2.0
+        if: matrix.node-version == '18.x'
         env:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
         with:
           coverageCommand: yarn run test
           coverageLocations: |
             ${{github.workspace}}/coverage/*.lcov:lcov
-
