--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -4,7 +4,7 @@ on:
     types: [created]
 
   workflow_dispatch:
-  
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -16,10 +16,10 @@ jobs:
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
-          scope: '@dancrumb'
-          
+          scope: "@dancrumb"
+
       - run: yarn
       - run: npm publish --access=public
         env:
