--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -21,6 +21,7 @@ jobs:
           scope: "@dancrumb"
 
       - run: yarn
+      - run: yarn run build
       - run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
