chore: 🤖 add files to npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,21 +1,17 @@
 src/
-test/
 .eslintignore
 .eslintrc.js
-node_modules/
 coverage/
 .idea/
 .istanbul.yml
-.babelrc
 .codeclimate.yml
-.travis.yml
 .npmignore
 .github/
 __tests__/
-.yarn/
+.yarn*
 .pnp*
 .prettierrc
-.yarnrc.yml
 .vscode/
 jest.*
-tsconfig.json
+tsconfig*.json
+docs/
