--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,5 @@
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
+    spec: "@yarnpkg/plugin-version"
 
 yarnPath: .yarn/releases/yarn-3.2.4.cjs
